[gd_scene load_steps=54 format=3 uid="uid://cb3pdp5vdap70"]

[ext_resource type="Script" path="res://scenes/pause_menu_6-9/new_pause.gd" id="1_58idc"]
[ext_resource type="Texture2D" uid="uid://bt5mc16qoaps2" path="res://textures/notebook_costume_open_right.png" id="2_sutth"]
[ext_resource type="Texture2D" uid="uid://jvwite3nwet0" path="res://textures/notebook_map_open_right.png" id="3_fhqja"]
[ext_resource type="Texture2D" uid="uid://vvu15kb5fio5" path="res://textures/notebook_open_full.png" id="4_quywb"]
[ext_resource type="Texture2D" uid="uid://dhd2caxult85s" path="res://textures/resume_normal.png" id="5_4kibs"]
[ext_resource type="Texture2D" uid="uid://d2h43sro3w2q5" path="res://textures/resume_pressed.png" id="6_b3t1n"]
[ext_resource type="Texture2D" uid="uid://c86d7wdfd84g7" path="res://textures/resume_toggle.png" id="7_h8po5"]
[ext_resource type="Script" path="res://scenes/resume.gd" id="8_m1u84"]
[ext_resource type="Texture2D" uid="uid://ds2pyurva32ld" path="res://textures/costumes_normal.png" id="9_d2fno"]
[ext_resource type="Texture2D" uid="uid://pqawspkvpwwg" path="res://textures/costumes_pressed.png" id="10_82oiy"]
[ext_resource type="Texture2D" uid="uid://713palsmyv0c" path="res://textures/costumes_hover.png" id="11_ee5wq"]
[ext_resource type="Texture2D" uid="uid://cftffxbi2ovn2" path="res://textures/map_normal.png" id="12_l004l"]
[ext_resource type="Texture2D" uid="uid://fvsvayronwhp" path="res://textures/map_pressed.png" id="13_6lcno"]
[ext_resource type="Texture2D" uid="uid://cp85jf1ynf2kc" path="res://textures/map_toggle.png" id="14_vtuxw"]
[ext_resource type="Texture2D" uid="uid://dmw38yw13i2co" path="res://textures/question.png" id="15_uqdf3"]
[ext_resource type="Texture2D" uid="uid://begow1ioms6kb" path="res://textures/quit_normal.png" id="16_bn0dg"]
[ext_resource type="Texture2D" uid="uid://b338bkhm6xexn" path="res://textures/quit_pressed.png" id="17_o1wni"]
[ext_resource type="Texture2D" uid="uid://6as0vow0ag6t" path="res://textures/quit_toggle.png" id="18_8g65a"]
[ext_resource type="Script" path="res://scenes/quit.gd" id="19_kd5uq"]
[ext_resource type="Texture2D" uid="uid://bhkwkp60phtb6" path="res://textures/notebook_open_left.png" id="20_pu8tg"]
[ext_resource type="Texture2D" uid="uid://cyyqcqnltqpcw" path="res://textures/notebook_open_right.png" id="21_6peej"]
[ext_resource type="Texture2D" uid="uid://diljh8qyh1p5o" path="res://textures/notebook_pause_menu.png" id="22_yx2rv"]
[ext_resource type="Texture2D" uid="uid://bn0m8v60v770w" path="res://textures/notebook_map_open_full.png" id="23_p7ecx"]
[ext_resource type="Texture2D" uid="uid://blok5k2fvw77k" path="res://textures/back_normal.png" id="24_ks00i"]
[ext_resource type="Texture2D" uid="uid://boardwho7nv41" path="res://textures/back_pressed.png" id="25_qbkbo"]
[ext_resource type="Texture2D" uid="uid://d2b5nv3em4rts" path="res://textures/back_toggle.png" id="26_enpyt"]
[ext_resource type="Script" path="res://scenes/back.gd" id="27_mkwov"]
[ext_resource type="FontFile" uid="uid://cxco3lwv0bs5r" path="res://scenes/joystix monospace.otf" id="28_rq0gd"]
[ext_resource type="Texture2D" uid="uid://eslc6fo56qxg" path="res://textures/notebook_map_open_left.png" id="29_i5b3u"]
[ext_resource type="Texture2D" uid="uid://djk37ims275lx" path="res://textures/notebook_costume_open_left.png" id="30_1mf7y"]
[ext_resource type="Texture2D" uid="uid://dc64cf0113g7y" path="res://textures/notebook_costume_open_full.png" id="31_hw4iw"]
[ext_resource type="Texture2D" uid="uid://bmye3la8x11os" path="res://textures/default_normal.png" id="32_lg8gt"]
[ext_resource type="Texture2D" uid="uid://b3ostyh5tqear" path="res://textures/default_pressed.png" id="33_uhfm3"]
[ext_resource type="Texture2D" uid="uid://bn8ua7eunacht" path="res://textures/default_hover.png" id="34_w55a4"]
[ext_resource type="Script" path="res://scenes/default.gd" id="35_8ncyx"]
[ext_resource type="Texture2D" uid="uid://8xjq3oi3lxbg" path="res://textures/check.png" id="36_scndf"]
[ext_resource type="Texture2D" uid="uid://ro7e432hsaa5" path="res://textures/raincoat_normal.png" id="37_ya7ih"]
[ext_resource type="Texture2D" uid="uid://wybbptx08f81" path="res://textures/raincoat_pressed.png" id="38_112ah"]
[ext_resource type="Texture2D" uid="uid://dxgcn8dm6xifs" path="res://textures/raincoat_hover.png" id="39_g4hdm"]
[ext_resource type="Texture2D" uid="uid://1c2qbrkonr65" path="res://textures/onesie_normal.png" id="40_vc6fd"]
[ext_resource type="Texture2D" uid="uid://d3ygqgifs61gl" path="res://textures/onesie_pressed.png" id="41_b1dfe"]
[ext_resource type="Texture2D" uid="uid://d0t3y3ilgeut5" path="res://textures/onesie_hover.png" id="42_rwi6e"]
[ext_resource type="Texture2D" uid="uid://hya8106q8gr1" path="res://textures/woodling_normal.png" id="43_n6kd4"]
[ext_resource type="Texture2D" uid="uid://c0cdspok7bxa" path="res://textures/woodling_pressed.png" id="44_6ttsv"]
[ext_resource type="Texture2D" uid="uid://cyqn607ul76l5" path="res://textures/woodling_hover.png" id="45_wqp8f"]
[ext_resource type="Texture2D" uid="uid://cudusv3obmx6l" path="res://textures/dark_normal.png" id="46_fsrv1"]
[ext_resource type="Texture2D" uid="uid://cyq0mpjx4au6l" path="res://textures/dark_pressed.png" id="47_g7ol7"]
[ext_resource type="Texture2D" uid="uid://1eoty37mn7a0" path="res://textures/dark_hover.png" id="48_qnusm"]
[ext_resource type="Texture2D" uid="uid://yh3688ta3j3k" path="res://textures/question_dark.png" id="49_6cbm1"]
[ext_resource type="Script" path="res://scenes/back_2.gd" id="50_mithx"]

[sub_resource type="Animation" id="Animation_4f1hs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("notebook_open_right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(92, 453)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("notebook_open_right:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 480)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("notebook_open_right/notebook_cover:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("notebook_open_right/notebook_cover:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("notebook_open_left:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("notebook_open_left:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("notebook_open_right:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notebook_open_full:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wddl5"]
resource_name = "notebook_opening"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("notebook_open_right:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(122, 453), Vector2(122, -31), Vector2(122, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("notebook_open_right:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(640, 480)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("notebook_open_right/notebook_cover:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("notebook_open_right/notebook_cover:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("notebook_open_left:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("notebook_open_left:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.9, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("notebook_open_right:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notebook_open_full:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08iur"]
_data = {
"RESET": SubResource("Animation_4f1hs"),
"notebook_opening": SubResource("Animation_wddl5")
}

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_58idc")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.290196)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="notebook_costume_open_right" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 299.0
offset_right = 299.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(665, 561)
texture = ExtResource("2_sutth")
stretch_mode = 5

[node name="notebook_map_open_right" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 299.0
offset_right = 299.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fhqja")
stretch_mode = 5

[node name="notebook_open_full" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_quywb")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="notebook_open_full"]
layout_mode = 0
offset_left = 349.0
offset_top = 110.0
offset_right = 485.0
offset_bottom = 250.0
scale = Vector2(1.33588, 1.62628)

[node name="resume" type="TextureButton" parent="notebook_open_full/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../costumes")
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_4kibs")
texture_pressed = ExtResource("6_b3t1n")
texture_hover = ExtResource("7_h8po5")
texture_focused = ExtResource("7_h8po5")
script = ExtResource("8_m1u84")

[node name="costumes" type="TextureButton" parent="notebook_open_full/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../resume")
focus_neighbor_bottom = NodePath("../map")
texture_normal = ExtResource("9_d2fno")
texture_pressed = ExtResource("10_82oiy")
texture_hover = ExtResource("11_ee5wq")
texture_focused = ExtResource("11_ee5wq")

[node name="map" type="TextureButton" parent="notebook_open_full/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../costumes")
focus_neighbor_bottom = NodePath("../quit")
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource("12_l004l")
texture_pressed = ExtResource("13_6lcno")
texture_hover = ExtResource("14_vtuxw")
texture_disabled = ExtResource("15_uqdf3")
texture_focused = ExtResource("14_vtuxw")

[node name="quit" type="TextureButton" parent="notebook_open_full/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../map")
mouse_default_cursor_shape = 2
texture_normal = ExtResource("16_bn0dg")
texture_pressed = ExtResource("17_o1wni")
texture_hover = ExtResource("18_8g65a")
texture_focused = ExtResource("18_8g65a")
script = ExtResource("19_kd5uq")

[node name="notebook_open_left" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -109.0
offset_right = -109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(437, 264)
texture = ExtResource("20_pu8tg")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_08iur")
}

[node name="notebook_open_right" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 122.0
offset_top = 453.0
offset_right = 122.0
offset_bottom = 453.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(189, 254)
texture = ExtResource("21_6peej")
stretch_mode = 5

[node name="notebook_cover" type="TextureRect" parent="notebook_open_right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(199.444, 219.472)
texture = ExtResource("22_yx2rv")
stretch_mode = 5

[node name="notebook_map_open_full" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("23_p7ecx")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="notebook_map_open_full"]
layout_mode = 0
offset_left = 401.0
offset_top = 791.0
offset_right = 529.0
offset_bottom = 831.0
scale = Vector2(3.16, 3.16)

[node name="back" type="TextureButton" parent="notebook_map_open_full/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("24_ks00i")
texture_pressed = ExtResource("25_qbkbo")
texture_hover = ExtResource("26_enpyt")
texture_focused = ExtResource("26_enpyt")
script = ExtResource("27_mkwov")

[node name="ColorRect" type="ColorRect" parent="notebook_map_open_full"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 914.0
offset_top = 557.0
offset_right = 1296.0
offset_bottom = 951.0
scale = Vector2(-0.1, -0.096)
mouse_filter = 1
color = Color(1, 0, 0, 1)

[node name="barleys_office" type="RichTextLabel" parent="notebook_map_open_full"]
layout_mode = 0
offset_left = 793.0
offset_top = 487.0
offset_right = 1000.0
offset_bottom = 516.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/normal_font = ExtResource("28_rq0gd")
text = "Barley's office"

[node name="notebook_map_open_left" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -245.0
offset_right = -245.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(-2.38419e-06, 1)
pivot_offset = Vector2(1226, 574)
texture = ExtResource("29_i5b3u")
stretch_mode = 5

[node name="notebook_costume_open_left" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -243.0
offset_right = -243.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4.88758e-06, 1)
pivot_offset = Vector2(1204, 505)
texture = ExtResource("30_1mf7y")
stretch_mode = 5

[node name="notebook_costume_open_full" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("31_hw4iw")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="notebook_costume_open_full"]
layout_mode = 0
offset_left = 1006.0
offset_top = 175.0
offset_right = 1134.0
offset_bottom = 215.0
scale = Vector2(3.06749, 3.73432)

[node name="Default" type="TextureButton" parent="notebook_costume_open_full/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer2/back_2")
texture_normal = ExtResource("32_lg8gt")
texture_pressed = ExtResource("33_uhfm3")
texture_hover = ExtResource("34_w55a4")
texture_focused = ExtResource("34_w55a4")
script = ExtResource("35_8ncyx")

[node name="check_default" type="Area2D" parent="notebook_costume_open_full/VBoxContainer/Default"]

[node name="check_default" type="Sprite2D" parent="notebook_costume_open_full/VBoxContainer/Default/check_default"]
position = Vector2(130.752, 16)
texture = ExtResource("36_scndf")

[node name="raincoat" type="TextureButton" parent="notebook_costume_open_full/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("37_ya7ih")
texture_pressed = ExtResource("38_112ah")
texture_hover = ExtResource("39_g4hdm")
texture_disabled = ExtResource("15_uqdf3")
texture_focused = ExtResource("39_g4hdm")

[node name="check_raincoat" type="Area2D" parent="notebook_costume_open_full/VBoxContainer/raincoat"]

[node name="check_raincoat" type="Sprite2D" parent="notebook_costume_open_full/VBoxContainer/raincoat/check_raincoat"]
position = Vector2(130.752, 16)
texture = ExtResource("36_scndf")

[node name="onesie" type="TextureButton" parent="notebook_costume_open_full/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("40_vc6fd")
texture_pressed = ExtResource("41_b1dfe")
texture_hover = ExtResource("42_rwi6e")
texture_disabled = ExtResource("15_uqdf3")
texture_focused = ExtResource("42_rwi6e")

[node name="check_onesie" type="Area2D" parent="notebook_costume_open_full/VBoxContainer/onesie"]
position = Vector2(-8.14999, 0.302322)

[node name="check_onesie" type="Sprite2D" parent="notebook_costume_open_full/VBoxContainer/onesie/check_onesie"]
position = Vector2(130.752, 16)
texture = ExtResource("36_scndf")

[node name="woodling" type="TextureButton" parent="notebook_costume_open_full/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("43_n6kd4")
texture_pressed = ExtResource("44_6ttsv")
texture_hover = ExtResource("45_wqp8f")
texture_disabled = ExtResource("15_uqdf3")
texture_focused = ExtResource("45_wqp8f")

[node name="check_woodling" type="Area2D" parent="notebook_costume_open_full/VBoxContainer/woodling"]
position = Vector2(6.51999, -0.0820815)

[node name="check_woodling" type="Sprite2D" parent="notebook_costume_open_full/VBoxContainer/woodling/check_woodling"]
position = Vector2(130.752, 16)
texture = ExtResource("36_scndf")

[node name="dark" type="TextureButton" parent="notebook_costume_open_full/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("46_fsrv1")
texture_pressed = ExtResource("47_g7ol7")
texture_hover = ExtResource("48_qnusm")
texture_disabled = ExtResource("49_6cbm1")
texture_focused = ExtResource("48_qnusm")

[node name="check_dark" type="Area2D" parent="notebook_costume_open_full/VBoxContainer/dark"]
position = Vector2(-18.908, 0.0690714)

[node name="check_dark" type="Sprite2D" parent="notebook_costume_open_full/VBoxContainer/dark/check_dark"]
position = Vector2(130.752, 16)
texture = ExtResource("36_scndf")

[node name="VBoxContainer2" type="VBoxContainer" parent="notebook_costume_open_full"]
layout_mode = 0
offset_left = 401.0
offset_top = 791.0
offset_right = 529.0
offset_bottom = 831.0
scale = Vector2(3.16, 3.16)

[node name="back_2" type="TextureButton" parent="notebook_costume_open_full/VBoxContainer2"]
layout_mode = 2
focus_neighbor_right = NodePath("../../VBoxContainer/Default")
texture_normal = ExtResource("24_ks00i")
texture_pressed = ExtResource("25_qbkbo")
texture_hover = ExtResource("26_enpyt")
texture_focused = ExtResource("26_enpyt")
script = ExtResource("50_mithx")

[node name="VBoxContainer3" type="VBoxContainer" parent="notebook_costume_open_full"]
layout_mode = 0
offset_left = 530.0
offset_top = 363.0
offset_right = 862.0
offset_bottom = 695.0

[node name="TextureRect" type="TextureRect" parent="notebook_costume_open_full/VBoxContainer3"]
layout_mode = 2
expand_mode = 4

[connection signal="visibility_changed" from="notebook_open_full" to="notebook_open_full/VBoxContainer/resume" method="_on_notebook_open_full_visibility_changed"]
[connection signal="visibility_changed" from="notebook_map_open_full" to="notebook_map_open_full/VBoxContainer/back" method="_on_notebook_map_open_full_visibility_changed"]
[connection signal="visibility_changed" from="notebook_costume_open_full" to="notebook_costume_open_full/VBoxContainer/Default" method="_on_notebook_costume_open_full_visibility_changed"]
